Provided token expiration, user valdiation and permissions in req
