# src/auth/jwt-routes.ts
@@ -1,4 +1,5 @@
 import fastify from '../fastify'
+import logger from '../logger'
 import jwtPlugin from './jwtPlugin'
 
 /**
@@ -6,30 +7,8 @@ import jwtPlugin from './jwtPlugin'
  */
 export async function setupJWT() {
     // Setup
-    // Token generation route
-    fastify.post('/generate-token', (req, res) => {
-        const token = fastify.jwt.sign({
-            // Payload here
-            // For now 'test', but shall contain username
-            username: 'test.user'
-            // TODO: Make JWT generation better (only for authorized users --> pw check) and store username
-        })
-
-        res.send({ token })
-    })
-
     // Lets load the custom jwt plugin
     await fastify.register(jwtPlugin)
 
-    // And define a test route
-    // TODO: Remove later
-    fastify.get(
-        '/test-jwt',
-        {
-            onRequest: [fastify.authenticate]
-        },
-        async function (request, reply) {
-            return request.user
-        }
-    )
+    logger.info('Successfully initialized JWT auth plugin')
 }
