# src/routes/api/auth/getCheck-token.ts
@@ -15,17 +15,27 @@ import config from '../../../config'
 import BadRequestResponseZ from '../../../types/BadRequestResponseZ'
 import InternalServerErrorResponseZ from '../../../types/InternalServerErrorResponseZ'
 import UnauthorizedResponseZ from '../../../types/UnauthorizedResponseZ'
+import requireJWT from '../../../types/requireJWT'
+import { encodeJWTPayload, JWTPayloadZ } from '../../../types/JWTPayload'
 
 fastify.withTypeProvider<FastifyZodOpenApiTypeProvider>().get(
     '/api/auth/check-token',
     {
+        onRequest: [fastify.authenticate], // Secures route with JWT
+
         schema: {
             hide: false,
-            summary: '', // TODO: Add summary and description
-            description: ``, // Expandable, more detailed description
+            summary: 'Checks if token is still valid',
+            description:
+                'Checks if a token is still valid and returns the associated user, expiration date, user permissions, etc.',
+
+            security: requireJWT,
 
             response: {
-                200: z.literal('OK'),
+                200: z.object({
+                    payload: JWTPayloadZ,
+                    isAdmin: z.boolean()
+                }),
                 400: BadRequestResponseZ,
                 401: UnauthorizedResponseZ,
                 500: InternalServerErrorResponseZ
@@ -33,8 +43,11 @@ fastify.withTypeProvider<FastifyZodOpenApiTypeProvider>().get(
         } satisfies FastifyZodOpenApiSchema
     },
     async (req, res) => {
-        res.status(200)
+        const user = JWTPayloadZ.parse(req.user)
 
-        await res.send('OK')
+        return res.status(200).send({
+            payload: encodeJWTPayload(user),
+            isAdmin: req.isAdmin
+        })
     }
 )
